Name: servant-reflex
Version: 0.3.3
Synopsis: Servant reflex API generator
Description: Servant reflex API generator
License: BSD3
License-file: LICENSE.md
Author: Greg Hale, Doug Beardsley
Maintainer: imalsogreg@gmail.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.10

Flag Example
  description: Enable example
  default: False

library
  exposed-modules:
    Servant.Reflex
    Servant.Reflex.Multi

  other-modules:
    Servant.Common.BaseUrl
    Servant.Common.Req

  hs-source-dirs: src
  build-depends:
    base                >= 4.8,
    bytestring          >= 0.10,
    case-insensitive    >= 1.2.0.4,
    containers          >= 0.5.6,
    data-default        >= 0.5,
    exceptions          >= 0.8,
    ghcjs-dom           >= 0.2,
    http-api-data       >= 0.3.6,
    http-media          >= 0.6,
    jsaddle             >= 0.8,
    mtl                 >= 2.2.1,
    network-uri         >= 2.6,
    reflex              >= 0.5,
    reflex-dom-core     == 0.4,
    safe                >= 0.3.9,
    servant             >= 0.8,
    servant-auth        >= 0.2.1,
    string-conversions  >= 0.4,
    text                >= 1.2,
    transformers        >= 0.4

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2

  default-language: Haskell2010

executable example
  if flag(Example)
    buildable: True
  else
    buildable: False
  build-depends: aeson, reflex, servant-reflex, base, scientific, servant, reflex-dom, text
  default-language: Haskell2010
  main-is: Example.hs
  other-modules: API
  hs-source-dirs: exec
